
ChangeLog
Package fPortfolio

2014-09-30  tsetz

	* Final version compatible to books and other packages.

2014-09-22  tsetz

	* ChangeLog, DESCRIPTION: Updated ChangeLog and DESCRIPTION files
	  after submission to CRAN

2014-03-26 	wuertz

	* fPortfolioBacktest Package functions from r-forge embedded

2011-02-10  chalabi

	* DESCRIPTION: updated DESC file
	* inst/doc/PortfolioOptimizationSample.pdf: removed pdf file
	  because new version can be found on the website

2011-02-01  chalabi

	* R/efficientPortfolio.R, inst/unitTests/runit.minriskPortfolio.R:
	  Modified returned value of targetRiskFun when the target return
	  is not feasible with the given constraints.

2010-10-26  chalabi

	* NAMESPACE: updated NAMESPACE

2010-07-23  chalabi

	* inst/DocCopying.pdf: removed DocCopying.pdf license is already
	  specified in DESCRIPTION file
	* DESCRIPTION: moved Rglp and quadprog in Imports DESCR file

2010-04-22  chalabi

	* DESCRIPTION: updated DESC file
	* inst/CITATION: updated CITATION file

2010-04-16  chalabi

	* ChangeLog, DESCRIPTION: DESC and Changelog
	* R/solveRquadprog.R: set weights to NA when there is no solution

2010-04-13  chalabi

	* R/solveRquadprog.R: updated for latest version of quadprog

2010-04-12  chalabi

	* CITATION, DESCRIPTION, inst/CITATION: updated CITATION file
	* R/solveRquadprog.R: Using solve.QP rather than calling directly
	  Fortran routine in quadprog pkg.

2009-09-30  chalabi

	* inst/doc, inst/doc/PortfolioOptimizationSample.pdf: added pdf
	  files in inst/doc
	* DESCRIPTION: updated version number + link to ebooks

2009-09-28  chalabi

	* DESCRIPTION: updated version number
	* ChangeLog, DESCRIPTION: updated DESCR and ChangeLog

2009-09-24  stefan7th

	* R/efficientPortfolio.R: committed all minor local changes
	* NAMESPACE: new NAMESPACE structure which should ease maintenance
	  of packages.

2009-06-25  chalabi

	* DESCRIPTION, NAMESPACE: Merge branch 'devel-timeSeries'
	  
	  Conflicts: